2005-03-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/spawn.rb: Added.
	* README: Revised.

2005-02-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.c, rbglib_threads.c: Added GLib::Threads. 
	* src/lib/pkg-config.rb: Added PKGConfig.cflags_only_I, .cflags_only_other.
	* src/rbglib.h: Increment version information.

2005-02-26  KATO Kazuyoshi  <kzys@8-p.info>

	* src/rbgobj_type.c (rbgobj_lookup_class): Fixed a problem in Ruby 1.9.
	[ruby-list:40518] [ruby-dev:23690]

2005-02-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Removed to call GLib::Log.cancel_handler.

2005-02-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf-gnome2.rb: Don't remove Makefile with 'nmake clean'.

2005-02-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, COPYING.LIB: Replace "GNU LIBRARY GENERAL PUBLIC LICENSE"
	to "GNU LESSER GENERAL PUBLIC LICENSE".

2005-02-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Fix the default error level.

2005-02-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_messages.c: Fix a compiling warning on Cygwin.

2005-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf-gnome2.rb: Change checking-rules order.
	Added GTK_BASE_PATH environment variable option for Win32.
	* src/rbglib.c, rbglib_convert.c, rbgutil.h, rbgobject.h: 
	Remove to include glib.h directly.

2005-01-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_messages.c: Fix segfault, and make it simple.
	Now it doesn't raise Exception, because of bad influence to
	other libs such as gnomeprint.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes.
	* src/lib/pkgconfig.rb: Separated from mkmf-gnome2.rb.

2005-01-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_message.c, rbglib_spawn.c, rbgobject.c, rbgobj_boxed.c, 
	rbgobj_closure.c,rbgobj_enums.c,rbgobj_object.c, rbgobj_type.c, 
	src/lib/mkmf-gnome2.rb: Support MS VC++.
	* src/lib/mkmf-gnome2.rb: Added setup_win32, add_depend_package.