@@ -1,3 +1,7 @@
+2005-03-06  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbglib_threads.c, extconf.rb: Fix compiling problem on MSVC++.
+
 2005-03-05  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* sample/spawn.rb: Added.
